--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "widget:dev": "vite --config vite.config.js",
     "widget:build": "tsc --project tsconfig.widget.json && vite build --config vite.config.js",
     "widget:preview": "vite preview --config vite.config.js",
+    "widget:deploy": "ts-node scripts/deploy-widget.ts",
+    "widget:deploy:patch": "ts-node scripts/deploy-widget.ts patch",
+    "widget:deploy:minor": "ts-node scripts/deploy-widget.ts minor",
+    "widget:deploy:major": "ts-node scripts/deploy-widget.ts major",
     "windsurf:scan": "ts-node scripts/windsurf-issue-scanner.ts",
     "windsurf:execute": "ts-node scripts/windsurf-executor.ts",
     "windsurf:status": "cat .windsurf/status-dashboard.md",
@@ -17,17 +21,20 @@
     "check-status": "bash check-status.sh",
     "type-check": "tsc --noEmit",
     "test": "echo 'Tests to be implemented'",
+    "test:api-keys": "ts-node scripts/test-api-keys.ts",
     "lighthouse": "echo 'Lighthouse to be implemented'"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@stripe/stripe-js": "^7.3.1",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/ssr": "^0.6.1",
@@ -36,6 +43,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.3",
+    "openai": "^5.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
@@ -51,13 +59,18 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "chalk": "^5.4.1",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "eslint-plugin-security": "^3.0.1",
+    "node-fetch": "^3.3.2",
     "tailwindcss": "^4",
     "terser": "^5.40.0",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.3",
     "typescript": "^5.8.3",
+    "uuid": "^11.1.0",
     "vite": "^6.3.5"
   }
 }
